# mini-secure-channel-solana

./: .gitignore  README.md  requirements.txt  run.bat  run.sh
backend/: app.py
frontend/static/: main.js  style.css
frontend/templates/: index.html
phases/phase1_dh/: dh_exchange.py
phases/phase2_mitm/: mallory_attack.py
phases/phase3_auth/: authenticated_dh.py
phases/phase4_aead/: secure_channel.py
phases/phase5_solana/: solana_registry_client.py
phases/phase5_solana/solana_registry/: Anchor.toml  Cargo.toml
phases/phase5_solana/solana_registry/src/: lib.rs  main.rs
phases/phase6_blockchain_attack/: blockchain_mitm_attack.py
phases/visualizations/: diagram_generator.py
scripts/: RUN_ME.bat  demo_all_phases.py  run.bat  run.ps1  run.sh  test_env.py  test_run.bat
