[package]
name = "key-registry"
version = "0.1.0"
description = "Solana Key Registry - Decentralized public key verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "key_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"



